CamConfig.ui updated

--- a/plugin.xml
+++ b/plugin.xml
@@ -1,17 +1,9 @@
 <library path="src">
-  <class name="Drone CamConfig Plugin" type="rqt_drone.image.config" base_class_type="rqt_gui_py::Plugin">
+  <class name="Drone CamConfig Plugin" type="rqt_drone.camConfig.CamConfig" base_class_type="rqt_gui_py::Plugin">
     <description>
       Display image and configuration options.
     </description>
     <qtgui>
-      <!-- optional grouping...
-      <group>
-        <label>Group</label>
-      </group>
-      <group>
-        <label>Subgroup</label>
-      </group>
-      -->
       <label>Drone Plugin</label>
       <icon type="theme">system-help</icon>
       <statustip>CamConfig Plugin.</statustip>
